--- a/portfolio.html
+++ b/portfolio.html
@@ -299,9 +299,11 @@
 
     <footer class="footer">
       <div class="container">
+        <div class="footer-tablet">
         <div>
-          <div>
-            <span class="logo part1">Web</span><span class="logo part2">Studio</span>
+          <div class="footer-logo">
+            <span class="logo part1">Web</span
+            ><span class="logo part2">Studio</span>
           </div>
 
           <address>
@@ -365,6 +367,7 @@
             </li>
           </ul>
         </div>
+      </div>
         <!------------------- ПОДПИСКА -------------------->
       <form class="subscribe">
         <div class="subscribe-email">
