Кое-как работают первые страницы
Кое-как работают первые страницы в 3х точках перелома

--- a/index.html
+++ b/index.html
@@ -629,23 +629,23 @@
           </div>
         </div>
         <!------------------- ПОДПИСКА -------------------->
-        <form class="subscribe">
-          <div class="subscribe-email">
-            <label for="s-f">Подпишитесь на рассылку</label>
+        <form class="subscribe-email">
+          
+            <label for="sub-form">Подпишитесь на рассылку</label>
             <input
               type="email"
               name="subscribe"
-              id="s-f"
+              id="sub-form"
               placeholder="E-mail"
             />
-          </div>
 
-          <button class="button">
-            Подписаться
-            <svg class="send" width="24" height="24">
-              <use href="./images/sprite2.svg#send"></use>
-            </svg>
-          </button>
+            <button class="button">
+              Подписаться
+              <svg class="send" width="24" height="24">
+                <use href="./images/sprite2.svg#send"></use>
+              </svg>
+            </button>
+                
         </form>
       </div>
     </footer>
