--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/main.min.css" />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
   <!--target="_blank" rel="nofollow noreferrer"-->
 
@@ -83,12 +83,12 @@
         </nav>
       </div>
       
-      <p></p>
 
     </header>
 
     <main>
-      <section class="hero invisible">
+      
+      <section class="hero">
         <div class="container">
           <h1 class="hero-title">
             Эффективные решения <br />для вашего бизнеса
