Попытка отобразить изо.ч-з GH pages

--- a/index.html
+++ b/index.html
@@ -151,12 +151,12 @@
             <picture>              
               <source 
                 media="(min-width: 1200px)" type="image/webp"
-                srcset="/images/desktop_w/box1.webp 1x,/images/desktop_w/box1@2x.webp 2x"> 
+                srcset="images/desktop_w/box1.webp 1x, ./images/desktop_w/box1@2x.webp 2x"> 
 
               <source 
                 media="(min-width: 1200px)" 
                 srcset="/images/desktop/box1.jpg 1x,/images/desktop/box1@2x.jpg 2x"> <!-- need with "w" width="270" height="260" -->
-              <img src="/images/desktop/box1.jpg" alt="Программист за работой">
+              <img src="./images/desktop/box1.jpg" alt="Программист за работой">
             </picture>
 
             <p class="moir-content">Десктопные приложения</p>
