--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet" />
-  <link rel="stylesheet" href="./css/main.css" />
+  <link rel="stylesheet" href="./css/main.min.css" />
 </head>
 <!--target="_blank" rel="nofollow noreferrer"-->
 
@@ -151,11 +151,11 @@
             <picture>              
               <source 
                 media="(min-width: 1200px)" type="image/webp"
-                srcset="images/desktop_w/box1.webp 1x, ./images/desktop_w/box1@2x.webp 2x"> 
+                srcset="./images/desktop_w/box1.webp 1x, ./images/desktop_w/box1@2x.webp 2x"> 
 
               <source 
                 media="(min-width: 1200px)" 
-                srcset="/images/desktop/box1.jpg 1x,/images/desktop/box1@2x.jpg 2x"> <!-- need with "w" width="270" height="260" -->
+                srcset="./images/desktop/box1.jpg 1x, ./images/desktop/box1@2x.jpg 2x"> <!-- need with "w" width="270" height="260" -->
               <img src="./images/desktop/box1.jpg" alt="Программист за работой">
             </picture>
 
@@ -166,12 +166,12 @@
             <picture>              
               <source 
                 media="(min-width: 1200px)" type="image/webp"
-                srcset="/images/desktop_w/box2.webp 1x,/images/desktop_w/box2@2x.webp 2x"> 
+                srcset="./images/desktop_w/box2.webp 1x, ./images/desktop_w/box2@2x.webp 2x"> 
 
               <source 
                 media="(min-width: 1200px)" 
-                srcset="/images/desktop/box2.jpg 1x,/images/desktop/box2@2x.jpg 2x"> <!-- need with "w" width="270" height="260" -->
-              <img src="/images/desktop/box2.jpg" alt="Дизайнер за работой">
+                srcset="./images/desktop/box2.jpg 1x, ./images/desktop/box2@2x.jpg 2x"> <!-- need with "w" width="270" height="260" -->
+              <img src="./images/desktop/box2.jpg" alt="Дизайнер за работой">
             </picture>
             <p class="moir-content">Мобильные приложения</p>
           </li>
@@ -180,12 +180,12 @@
             <picture>              
               <source 
                 media="(min-width: 1200px)" type="image/webp"
-                srcset="/images/desktop_w/box3.webp 1x,/images/desktop_w/box3@2x.webp 2x"> 
+                srcset="./images/desktop_w/box3.webp 1x, ./images/desktop_w/box3@2x.webp 2x"> 
 
               <source 
                 media="(min-width: 1200px)" 
-                srcset="/images/desktop/box3.jpg 1x,/images/desktop/box3@2x.jpg 2x"> <!-- need with "w" width="270" height="260" -->
-              <img src="/images/desktop/box3.jpg" alt="Дизайнер выбирает колор">
+                srcset="./images/desktop/box3.jpg 1x, ./images/desktop/box3@2x.jpg 2x"> <!-- need with "w" width="270" height="260" -->
+              <img src="./images/desktop/box3.jpg" alt="Дизайнер выбирает колор">
             </picture>
             <p class="moir-content">Дизайнерские решения</p>
           </li>
@@ -210,24 +210,24 @@
             <picture>
               <source 
                 media="(max-width: 767px)" type="image/webp"
-                srcset="/images/mobile_w/img1.webp 1x,/images/mobile_w/img1@2x.webp 2x">
+                srcset="./images/mobile_w/img1.webp 1x, ./images/mobile_w/img1@2x.webp 2x">
               <source 
                 media="(min-width: 768px) and (max-width: 1199px)" type="image/webp"
-                srcset="/images/tablet_w/img1.webp 1x,/images/tablet_w/img1@2x.webp 2x">
+                srcset="./images/tablet_w/img1.webp 1x, ./images/tablet_w/img1@2x.webp 2x">
               <source 
                 media="(min-width: 1200px)" type="image/webp"
-                srcset="/images/desktop_w/img1.webp 1x,/images/desktop_w/img1@2x.webp 2x"> 
+                srcset="./images/desktop_w/img1.webp 1x, ./images/desktop_w/img1@2x.webp 2x"> 
 
               <source 
                 media="(max-width: 767px)" 
-                srcset="/images/mobile/img1.jpg 1x,/images/mobile/img1@2x.jpg 2x">
+                srcset="./images/mobile/img1.jpg 1x, ./images/mobile/img1@2x.jpg 2x">
               <source 
                 media="(min-width: 768px) and (max-width: 1199px)" 
-                srcset="/images/tablet/img1.jpg 1x,/images/tablet/img1@2x.jpg 2x">
+                srcset="./images/tablet/img1.jpg 1x, ./images/tablet/img1@2x.jpg 2x">
               <source 
                 media="(min-width: 1200px)" 
-                srcset="/images/desktop/img1.jpg 1x,/images/desktop/img1@2x.jpg 2x"> <!-- need with "w" width="270" height="260" -->
-              <img src="/images/mobile/img1.jpg" alt="Игорь">
+                srcset="./images/desktop/img1.jpg 1x, ./images/desktop/img1@2x.jpg 2x"> <!-- need with "w" width="270" height="260" -->
+              <img src="./images/mobile/img1.jpg" alt="Игорь">
             </picture>
 
             <h3 class="team-name">Игорь Демьяненко</h3>
@@ -270,24 +270,24 @@
             <picture>
               <source 
                 media="(max-width: 767px)" type="image/webp"
-                srcset="/images/mobile_w/img2.webp 1x,/images/mobile_w/img2@2x.webp 2x">
+                srcset="./images/mobile_w/img2.webp 1x, ./images/mobile_w/img2@2x.webp 2x">
               <source 
                 media="(min-width: 768px) and (max-width: 1199px)" type="image/webp"
-                srcset="/images/tablet_w/img2.webp 1x,/images/tablet_w/img2@2x.webp 2x">
+                srcset="./images/tablet_w/img2.webp 1x, ./images/tablet_w/img2@2x.webp 2x">
               <source 
                 media="(min-width: 1200px)" type="image/webp"
-                srcset="/images/desktop_w/img2.webp 1x,/images/desktop_w/img2@2x.webp 2x"> 
+                srcset="./images/desktop_w/img2.webp 1x, ./images/desktop_w/img2@2x.webp 2x"> 
 
               <source 
                 media="(max-width: 767px)" 
-                srcset="/images/mobile/img2.jpg 1x,/images/mobile/img2@2x.jpg 2x">
+                srcset="./images/mobile/img2.jpg 1x, ./images/mobile/img2@2x.jpg 2x">
               <source 
                 media="(min-width: 768px) and (max-width: 1199px)" 
-                srcset="/images/tablet/img2.jpg 1x,/images/tablet/img2@2x.jpg 2x">
+                srcset="./images/tablet/img2.jpg 1x, ./images/tablet/img2@2x.jpg 2x">
               <source 
                 media="(min-width: 1200px)" 
-                srcset="/images/desktop/img2.jpg 1x,/images/desktop/img2@2x.jpg 2x"> <!-- need with "w" width="270" height="260" -->
-              <img src="/images/mobile/img2.jpg" alt="Ольга">
+                srcset="./images/desktop/img2.jpg 1x, ./images/desktop/img2@2x.jpg 2x"> <!-- need with "w" width="270" height="260" -->
+              <img src="./images/mobile/img2.jpg" alt="Ольга">
             </picture>
 
             <h3 class="team-name">Ольга Репина</h3>
@@ -330,24 +330,24 @@
             <picture>
               <source 
                 media="(max-width: 767px)" type="image/webp"
-                srcset="/images/mobile_w/img3.webp 1x,/images/mobile_w/img3@2x.webp 2x">
+                srcset="./images/mobile_w/img3.webp 1x, ./images/mobile_w/img3@2x.webp 2x">
               <source 
                 media="(min-width: 768px) and (max-width: 1199px)" type="image/webp"
-                srcset="/images/tablet_w/img3.webp 1x,/images/tablet_w/img3@2x.webp 2x">
+                srcset="./images/tablet_w/img3.webp 1x, ./images/tablet_w/img3@2x.webp 2x">
               <source 
                 media="(min-width: 1200px)" type="image/webp"
-                srcset="/images/desktop_w/img3.webp 1x,/images/desktop_w/img3@2x.webp 2x"> 
+                srcset="./images/desktop_w/img3.webp 1x, ./images/desktop_w/img3@2x.webp 2x"> 
 
               <source 
                 media="(max-width: 767px)" 
-                srcset="/images/mobile/img3.jpg 1x,/images/mobile/img3@2x.jpg 2x">
+                srcset="./images/mobile/img3.jpg 1x, ./images/mobile/img3@2x.jpg 2x">
               <source 
                 media="(min-width: 768px) and (max-width: 1199px)" 
-                srcset="/images/tablet/img3.jpg 1x,/images/tablet/img3@2x.jpg 2x">
+                srcset="./images/tablet/img3.jpg 1x, ./images/tablet/img3@2x.jpg 2x">
               <source 
                 media="(min-width: 1200px)" 
-                srcset="/images/desktop/img3.jpg 1x,/images/desktop/img3@2x.jpg 2x"> <!-- need with "w" width="270" height="260" -->
-              <img src="/images/mobile/img3.jpg" alt="Николай">
+                srcset="./images/desktop/img3.jpg 1x, ./images/desktop/img3@2x.jpg 2x"> <!-- need with "w" width="270" height="260" -->
+              <img src="./images/mobile/img3.jpg" alt="Николай">
             </picture>
 
             <h3 class="team-name">Николай Тарасов</h3>
@@ -390,24 +390,24 @@
             <picture>
               <source 
                 media="(max-width: 767px)" type="image/webp"
-                srcset="/images/mobile_w/img4.webp 1x,/images/mobile_w/img4@2x.webp 2x">
+                srcset="./images/mobile_w/img4.webp 1x, ./images/mobile_w/img4@2x.webp 2x">
               <source 
                 media="(min-width: 768px) and (max-width: 1199px)" type="image/webp"
-                srcset="/images/tablet_w/img4.webp 1x,/images/tablet_w/img4@2x.webp 2x">
+                srcset="./images/tablet_w/img4.webp 1x, ./images/tablet_w/img4@2x.webp 2x">
               <source 
                 media="(min-width: 1200px)" type="image/webp"
-                srcset="/images/desktop_w/img4.webp 1x,/images/desktop_w/img4@2x.webp 2x"> 
+                srcset="./images/desktop_w/img4.webp 1x, ./images/desktop_w/img4@2x.webp 2x"> 
 
               <source 
                 media="(max-width: 767px)" 
-                srcset="/images/mobile/img4.jpg 1x,/images/mobile/img4@2x.jpg 2x">
+                srcset="./images/mobile/img4.jpg 1x, ./images/mobile/img4@2x.jpg 2x">
               <source 
                 media="(min-width: 768px) and (max-width: 1199px)" 
-                srcset="/images/tablet/img4.jpg 1x,/images/tablet/img4@2x.jpg 2x">
+                srcset="./images/tablet/img4.jpg 1x, ./images/tablet/img4@2x.jpg 2x">
               <source 
                 media="(min-width: 1200px)" 
-                srcset="/images/desktop/img4.jpg 1x,/images/desktop/img4@2x.jpg 2x"> <!-- need with "w" width="270" height="260" -->
-              <img src="/images/mobile/img4.jpg" alt="Михаил">
+                srcset="./images/desktop/img4.jpg 1x, ./images/desktop/img4@2x.jpg 2x"> <!-- need with "w" width="270" height="260" -->
+              <img src="./images/mobile/img4.jpg" alt="Михаил">
             </picture>
 
             <h3 class="team-name">Михаил Ермаков</h3>
